<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BkEmu</string>
    <string name="fps_string">%d fps</string>
    <string name="osd_keyboard">On-screen keyboard</string>
    <string name="osd_joystick">On-screen joystick</string>
    <string name="menu_switch_display_mode">Display mode</string>
    <string name="menu_reset">Reset computer</string>
    <string name="menu_change_config">Configuration</string>
    <string name="menu_select_config">Select configuration</string>
    <string name="menu_load_bin_file">Load .BIN file</string>
    <string name="menu_disk_manager">Disk manager</string>
    <string name="menu_about">About</string>
    <string name="menu_fullscreen_mode">Fullscreen mode</string>
    <string name="menu_screenshot">Screenshot</string>
    <string name="menu_save_state">Save state</string>
    <string name="menu_restore_state">Restore state</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_floppy_disk_mount_error">Floppy disk image mount error!</string>
    <string name="dialog_ide_drive_attach_error">IDE drive image attach error!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="bk_0010_monitor">BK 0010&#8211;01 (Monitor only)</string>
    <string name="bk_0010_basic">BK 0010&#8211;01 (Basic)</string>
    <string name="bk_0010_mstd">BK 0010&#8211;01 (Focal/MSTD)</string>
    <string name="bk_0010_kngmd">BK 0010&#8211;01 (KNGMD)</string>
    <string name="bk_0010_smk512">BK 0010&#8211;01 (SMK512)</string>
    <string name="bk_0011m_mstd">BK 0011M (MSTD)</string>
    <string name="bk_0011m_kngmd">BK 0011M (KNGMD)</string>
    <string name="bk_0011m_smk512">BK 0011M (SMK512)</string>
    <string name="desc_erase">Erase</string>
    <string name="desc_collapse">Collapse</string>
    <string name="desc_expand">Expand</string>
    <string name="desc_shift">Low register</string>
    <string name="desc_backspace">Backspace</string>
    <string name="desc_left">Left</string>
    <string name="desc_up">Up</string>
    <string name="desc_down">Down</string>
    <string name="desc_right">Right</string>
    <string name="desc_enter">Enter</string>
    <string name="err">Error</string>
    <string name="exit_confirm_title">Quit emulator</string>
    <string name="exit_confirm_message">Do you really want to quit?</string>
    <string name="about_logo">BkEmu Logo</string>
    <string name="about_version">BkEmu v. %s</string>
    <string name="about_build">Build %s</string>
    <string name="about_info">Emulator of 16-bit PDP-11-compatible Soviet home computers Elektronika BK-0010/11M</string>
    <string name="about_cpu_stats">Effective clock frequency: %1$.3f MHz (%2$.2f%%)</string>
    <string name="about_render_stats">Render loop load: %1$.0f%%</string>
    <string name="about_link">https://github.com/3cky/bkemu-android</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_share">Share!</string>
    <string name="changelog_title">What\'s new?</string>
    <string name="changelog_title_full">Changelog</string>
    <string name="changelog_show_full">Full changelog</string>
    <string name="fdd_empty">(Empty)</string>
    <string name="toast_image_load_info">File to load: %1s</string>
    <string name="toast_image_load_success">%1$s: address 0%2$o, length %3$d</string>
    <string name="toast_image_load_error">Can\'t load file \'%s\'</string>
    <string name="toast_image_save_info">File \'%s\' saved</string>
    <string name="toast_image_save_error">Can\'t save file \'%s\'</string>
    <string name="toast_take_screenshot_error">Can\'t take a screenshot</string>
    <string name="toast_state_save_success">State successfully saved</string>
    <string name="toast_state_save_error">State save error</string>
    <string name="toast_state_restore_success">State successfully restored</string>
    <string name="toast_state_restore_error">State restore error</string>
    <string name="volume">Audio volume</string>
    <string name="master_volume">Master</string>
    <string name="speaker">Speaker</string>
    <string name="covox" translatable="false">Covox</string>
    <string name="ay8910" translatable="false">AY8910</string>
    <string name="write_protect">Write Protect</string>
    <string name="hdd_detached">(Not attached)</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_settings">Keyboard settings</string>
    <string name="osd_keyboard_mode">Display mode</string>
    <string name="osd_keyboard_mode_normal">Normal</string>
    <string name="osd_keyboard_mode_overlay">Overlay</string>
    <string name="osd_keyboard_overlay_alpha">Opacity in overlay mode</string>
    <string name="gamepad">Gamepad</string>
    <string name="gamepad_setup">Gamepad setup</string>
    <string name="gamepad_button_left">Left</string>
    <string name="gamepad_button_right">Right</string>
    <string name="gamepad_button_up">Up</string>
    <string name="gamepad_button_down">Down</string>
    <string name="gamepad_button_a" translatable="false">A</string>
    <string name="gamepad_button_b" translatable="false">B</string>
    <string name="gamepad_button_select" translatable="false">Select</string>
    <string name="gamepad_button_start" translatable="false">Start</string>
    <string name="gamepad_button_not_bound" translatable="false">\?</string>
    <string name="external_storage_permissions_rationale">Filesystem access is needed to work with disk and program images</string>
    <string name="fc_title_choose_directory">Choose directory to save file</string>
    <string name="fc_title_choose_file">Choose file to load</string>
    <string name="fc_option_create_folder">New folder</string>
    <string name="fc_options_delete">Delete</string>
    <string name="clock_frequency">CPU speed</string>
    <string name="clock_speed_auto" translatable="false">clk_auto</string>
    <string name="clock_speed_3mhz" translatable="false">clk_3mhz</string>
    <string name="clock_speed_4mhz" translatable="false">clk_4mhz</string>
    <string name="clock_speed_6mhz" translatable="false">clk_6mhz</string>
    <string name="clock_speed_maximum" translatable="false">clk_maximum</string>
    <string name="clock_speed_desc_auto">Automatic</string>
    <string name="clock_speed_desc_3mhz">3 MHz (BK0010)</string>
    <string name="clock_speed_desc_4mhz">4 MHz (BK0011M)</string>
    <string name="clock_speed_desc_6mhz">6 MHz (turbo mode)</string>
    <string name="clock_speed_desc_maximum">Maximum (unlimited)</string>
    <string name="menestrel">Menestrel</string>
    <string name="toast_unsupported_file_type">Unsupported file type. Open a BIN, BKD, HDI, IMG, or BKEMU_STATE file.</string>
</resources>
