<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_switch_display_mode"
        android:icon="@drawable/ic_tv_white_24dp"
        android:title="@string/menu_switch_display_mode"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_toggle_keyboard"
        android:icon="@drawable/ic_keyboard_white_24dp"
        android:title="@string/osd_keyboard"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_toggle_joystick"
        android:icon="@drawable/ic_dpad_white_24"
        android:title="@string/osd_joystick"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_fullscreen_mode"
        android:icon="@drawable/ic_fullscreen_white_24"
        android:title="@string/menu_fullscreen_mode"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_disk_manager"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/menu_disk_manager"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_screenshot"
        android:icon="@drawable/ic_photo_camera_white_24"
        android:title="@string/menu_screenshot"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_load_bin_file"
        android:title="@string/menu_load_bin_file" />
    <item android:id="@+id/menu_save_state"
        android:title="@string/menu_save_state" />
    <item android:id="@+id/menu_restore_state"
        android:title="@string/menu_restore_state" />
    <item android:id="@+id/menu_reset"
        android:title="@string/menu_reset" />
</menu>