<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView android:id="@+id/about_logo"
            android:src="@drawable/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:contentDescription="@string/about_logo"/>

        <TextView android:id="@+id/about_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/about_version"/>

        <TextView android:id="@+id/about_build"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:text="@string/about_build" />

        <TextView android:id="@+id/about_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/about_info" />

        <TextView android:id="@+id/about_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:autoLink="web"
            android:text="@string/about_link" />

        <TextView android:id="@+id/about_changelog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/item_clickable"
            android:text="@string/about_changelog" />

        <TextView android:id="@+id/about_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/item_clickable"
            android:text="@string/about_share" />

        <TextView android:id="@+id/about_perf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:paddingTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/about_perf" />

    </LinearLayout>

</ScrollView>